# mosmix

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  LICENSE  build.rs  mosmix.sln  readme.md  version.json
.github/workflows/: ci.yml  dotnet.yml
data/: KL_Tageswerte_Beschreibung_Stationen.txt  MOSMIX_A762.kml  MOSMIX_A762.kmz  MetElementDefinition.xml  st.cfg
data/protos/: station.proto
sample/: DateTimeExtensions.cs  Program.cs  sample.csproj
src/: ForecastAdapter.cs  IMosmixReader.cs  Model.cs  MosmixReaderFactory.cs  MosmixStationRegistry.cs  MosmixXmlReader.cs  MosmixZippedXmlReader.cs  ValueConverter.cs  convert_stations.rs  date_time_ext.rs  dto.rs  geo_coord.rs  iso6709.rs  lib.rs  list_stations.rs  main.rs  mosmix.csproj  read_file.rs  tests.rs
src/gen_protobuf/: stations.rs
src/protos/: stations.proto
tests/: ForecastAdapterTest.cs  MosmixStationsRegistryTest.cs  MosmixXmlReaderTest.cs  ValueConverterTest.cs  mosmix.tests.csproj
tools/: PatriciaTrie.cs  Program.cs  ReadRegionIdentifiersFromCsv.cs  convertStations.csproj  locations-ext.csv  locations.csv
