[package]
name = "mosmix"
version = "0.1.0"
edition = "2021"
description = "Contains a database of all mosmix weather-stations."
license = "MIT" # Gültiger SPDX-Identifier
readme = "readme.md"          # Pfad zu deiner Readme-Datei
repository = "https://github.com/stefc/mosmix"
keywords = ["cli", "tool", "utility", "mosmix", "dwd"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.45"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
protobuf = "3.7.2"
encoding_rs = "0.8.35"

[build-dependencies]
protobuf-codegen = "3.7.2"
